add paigination on rest of requesting, but have error on perform pagination